--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,11 @@ All notable changes to this project are documented in this file.
 The format is based on [Keep a Changelog](http://keepachangelog.com/)
 and this project adheres to [Semantic Versioning](http://semver.org/)
 
+## [1.2.3] - 2017-02-17
+### Added
+- Username "demo" points application to demo.api.phidias.co 
+- Accept strings beggining with "http" as application codes
+
 ## [1.1.0] - 2017-01-06
 ### Added
 - First public release with basic communications functionality
